# desktopgalaxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  desktopgalaxy-install.sh  desktopgalaxy.sh  galaxy.cpp  galaxy.h  launch.sh  main.cpp  utility.cpp  utility.h  window.cpp  window.h
